--- a/Genetic Algorithm.ipynb
+++ b/Genetic Algorithm.ipynb
@@ -7,7 +7,7 @@
     "# The \"Hello, world!\" of Genetic Algorithms (GAs)\n",
     "\n",
     "\n",
-    "You can read the full introduction to this project on my blog at: udara.io/something. I'd suggest reading it if you're completely new to GAs and have no background in computer science. Besides that I've tried my best to keep the terminology inline with the code. \n",
+    "You can read the full introduction to this project on my blog at: https://udara.io/writing-a-genetic-algorithm/.\n",
     "\n",
     "\n",
     "## Background\n",
