--- a/Genetic Algorithm.ipynb
+++ b/Genetic Algorithm.ipynb
@@ -41,9 +41,11 @@
     "\n",
     "1. Start with a randomly generated population\n",
     "2. Calculate fitness of each member of the population\n",
-    "3. Mutate and crossover to produce **n** off springs\n",
+    "3. Mutate and crossover to produce **n** offsprings\n",
     "4. Replace current population with new population\n",
-    "5. Go to step 2"
+    "5. Go to step 2\n",
+    "\n",
+    "The steps 2-4 are typically repeated for 50-1000 times  (aka generations) per single run. The more generations you have per run, the higer the peak fitness of the population. It is typical for researchers to repeat runs several times and report the average of the results. "
    ]
   },
   {
